#
# Copyright © 2021 ZettaScale Technology <contact@zettascale.tech>
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#
[workspace]
resolver = "2"
members = [
    "examples",
    "zenoh-flow-commons",
    "zenoh-flow-daemon",
    "zenoh-flow-derive",
    "zenoh-flow-descriptors",
    "zenoh-flow-nodes",
    "zenoh-flow-records",
    "zenoh-flow-runtime",
    "zenoh-plugin-zenoh-flow",
    "zfctl",
]

[workspace.package]
authors = ["ZettaScale Zenoh Team <zenoh@zettascale.tech>"]
categories = ["network-programming"]
description = "Zenoh-Flow: a Zenoh-based data flow programming framework for computations that span from the cloud to the device."
edition = "2021"
homepage = "https://github.com/eclipse-zenoh/zenoh-flow"
license = " EPL-2.0 OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/eclipse-zenoh/zenoh-flow"
version = "0.6.0-dev"

[workspace.dependencies]
anyhow = "1.0.89"
async-std = { version = "1.6.5", features = ["attributes"] }
async-trait = "0.1.82"
base64 = "0.22.1"
bytesize = "1.2.0"
clap = { version = "4.5.17", features = ["derive"] }
flume = "0.11"
futures = "0.3.30"
git-version = "0.3.9"
log = "0.4"
serde = { version = "1.0.210", features = ["derive", "rc"] }
serde_cbor = "0.11"
serde_derive = "1.0.210"
serde_json = "1.0.128"
serde_yaml = "0.9.34"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3" }
uhlc = "0.8.0"
url = { version = "2.5.2", features = ["serde"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
tokio = { version = "1.40.0", default-features = false }
zenoh = { version = "1.0.3", features = [
    "internal",
    "unstable",
    "plugins",
    "internal_config",
] }
zenoh-config = { version = "1.0.3" }
zenoh-collections = { version = "1.0.3" }
zenoh-core = { version = "1.0.3" }
zenoh-ext = { version = "1.0.3" }
zenoh-flow-commons = { path = "./zenoh-flow-commons" }
zenoh-flow-daemon = { path = "./zenoh-flow-daemon" }
zenoh-flow-descriptors = { path = "./zenoh-flow-descriptors" }
zenoh-flow-nodes = { path = "./zenoh-flow-nodes" }
zenoh-flow-records = { path = "./zenoh-flow-records" }
zenoh-flow-runtime = { path = "./zenoh-flow-runtime" }
zenoh-keyexpr = { version = "1.0.3" }
zenoh-plugin-trait = { version = "1.0.3" }
zenoh-protocol = { version = "1.0.3" }
zenoh-result = "1.0.3"
zenoh-sync = { version = "1.0.3" }
zenoh-util = { version = "1.0.3" }

[profile.dev]
debug = true
opt-level = 0

[profile.release]
codegen-units = 1
debug = true
lto = "fat"
opt-level = 3
panic = "abort"
